--- a/index.html
+++ b/index.html
@@ -15,30 +15,41 @@
   </style>
 </head>
 <body>
-
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
+  <main class="container">
+    <div class="banner">
+      <img src="./images/logo.svg" alt="logo">
+    </div>
+    <div class="card">
+      <div class="bill">
+        <label for="bill">Bill</label>
+        <input type="number" id="bill"> 
+      </div>
+      <div class="tip">
+        <label for="tip">Select Tip %</label>
+        <div class="tips">
+          <button class="tip-5">5%</button>
+          <button class="tip-10">10%</button>
+          <button class="tip-15">15%</button>
+          <button class="tip-25">25%</button>
+          <button class="tip-50">50%</button>
+          <input type="number" id="tip" class="custom-tip-input">
+        </div>
+      </div>
+      <div class="people">
+        <label for="people">Number of People</label>
+        <input type="number" id="people">
+      </div>
+      <div class="result">
+        <div class="tip-amount">Tip Amount<span>/ person</span></div>
+        <div class="total">Total<span>/ person</span></div>
+        <button class="reset">Reset</button>
+      </div>
+    </div>
+  </main>
   
-  <div class="attribution">
+  <!-- <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer> -->
 </body>
 </html>
