--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | Tip calculator app</title>
@@ -24,7 +28,10 @@
     <div class="card flex-start">
       <div class="bill flex-start">
         <label for="bill">Bill</label>
-        <input type="number" id="bill"> 
+        <div class="input-group">
+          <img src="./images/icon-dollar.svg" class="icon-dollar"></img>
+          <input type="number" min="0" id="bill" name="bill" placeholder="0"> 
+        </div>
       </div>
       <div class="tip flex-start">
         <label for="tip">Select Tip %</label>
@@ -44,19 +51,34 @@
           <div class="tips-opt">
             <button class="tip-50">50%</button>
           </div>
-          <div class="tips-opt">
+          <div class="tips-opt custom">
             <input type="number" id="tip" name="tip" class="custom-tip-input" placeholder="Custom">
           </div>
         </div>
       </div>
-      <div class="people">
+      <div class="people flex-start">
         <label for="people">Number of People</label>
-        <input type="number" id="people">
+        <div class="input-group">
+          <img src="./images/icon-person.svg" class="icon-person"></img>
+          <input type="number" min="0" id="people" name="people" placeholder="0"> 
+        </div>
       </div>
-      <div class="result">
-        <div class="tip-amount">Tip Amount<span>/ person</span></div>
-        <div class="total">Total<span>/ person</span></div>
-        <button class="reset">Reset</button>
+      <div class="result flex-start">
+        <div class="tip-amount flex-row">
+          <div>Tip Amount<br><span>/ person</span></div>
+          <div class="result-group">
+            <img src="./images/icon-dollar.svg"></img>
+            <p>0</p>
+          </div>
+        </div>
+        <div class="total flex-row">
+          <div>Total<br><span>/ person</span></div>
+          <div class="result-group">
+            <img src="./images/icon-dollar.svg"></img>
+            <p>0</p>
+          </div>
+        </div>
+        <button class="btn-reset">RESET</button>
       </div>
     </div>
   </main>
