--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <label for="bill">Bill</label><span class="error" id="error-bill">Error</span>
           </div>
           <div class="input-group bill">
-            <img src="./images/icon-dollar.svg" class="icon-dollar"></img>
+            <img src="./images/icon-dollar.svg" class="icon-dollar" alt="icon dollar"></img>
             <input type="number" min="0" id="bill" name="bill" placeholder="0"> 
           </div>
         </div>
@@ -59,7 +59,7 @@
             <label for="people">Number of People</label><span class="error" id="error-people">Can't be zero</span>
           </div>
           <div class="input-group">
-            <img src="./images/icon-person.svg" class="icon-person"></img>
+            <img src="./images/icon-person.svg" class="icon-person" alt="icon person"></img>
             <input type="number" min="0" id="people" name="people" placeholder="0" invalid> 
           </div>
         </div>
@@ -69,14 +69,14 @@
           <div class="tip-amount flex-row">
             <div>Tip Amount<br><span>/ person</span></div>
             <div class="result-group">
-              <img src="./images/icon-dollar.svg"></img>
+              <img src="./images/icon-dollar.svg" alt="icon dollar"></img>
               <p>0.00</p>
             </div>
           </div>
           <div class="total flex-row">
             <div>Total<br><span>/ person</span></div>
             <div class="result-group">
-              <img src="./images/icon-dollar.svg"></img>
+              <img src="./images/icon-dollar.svg" alt="icon person"></img>
               <p>0.00</p>
             </div>
           </div>
