--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
           <div class="input-group">
             <img src="./images/icon-person.svg" class="icon-person" alt="icon person"></img>
-            <input type="number" min="0" id="people" name="people" placeholder="0" invalid> 
+            <input type="number" min="0" id="people" name="people" placeholder="0"> 
           </div>
         </div>
       </div>
