--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
   <main class="container">
     <div class="banner">
+      <h1 class="visually-hidden">Tip Calculator</h1>
       <img src="./images/logo.svg" alt="logo">
     </div>
     <div class="card flex-start">
